[package]
name = "mqtt-exporter"
authors = ["Benjamin Brittain"]
version = "0.1.0"
edition = "2021"

[dependencies]
paho-mqtt = "0.11"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
postcard = { path = "../postcard", features = ["use-std", "experimental-derive"] }
prometheus = "0.13"
once_cell = "1"
anyhow = "1"
hyper = {version = "*", features = ["server", "tcp", "http1"] }
paste = "1"
log = "0.4"
env_logger = "0.9"
serde = "1"

# if you aren't me, you won't need this.
air-quality-messages = { path = "../air-quality-messages/" }
